--- a/Part 5/index5.html
+++ b/Part 5/index5.html
@@ -7,7 +7,7 @@
 
 <body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.1/p5.js"></script>
-  <script src="sketch - Copy.js"></script>
+  <script src="sketch5.js"></script>
 </body>
 
 </html>
